--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "storybook-gpt",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "tsup",
     "test": "exit 0"
   },
   "keywords": [],
@@ -11,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.9.2",
+    "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   }
 }
