--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "lilconfig": "^3.0.0"
   }
 }
