--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.10.4",
+    "@types/react": "^18.2.43",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "lilconfig": "^3.0.0"
+    "lilconfig": "^3.0.0",
+    "openai": "^4.20.1"
   }
 }
