--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
   ],
   "scripts": {
     "build": "tsup",
-    "test": "exit 0"
+    "test": "exit 0",
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint --fix src --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^1.4.1",
     "@types/bluebird": "^3.5.42",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "dotenv": "^16.3.1",
+    "eslint": "^8.55.0",
+    "eslint-plugin-sort-imports-es6-autofix": "^0.6.0",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ts-node": "^10.9.2",
