Refactor readComponentsFolder to include excludePaths parameter

--- a/storybook-gpt.config.json
+++ b/storybook-gpt.config.json
@@ -1,4 +1,7 @@
+// Example config file
+
 {
   "componentsPath": "components",
-  "storybookPath": "storybook"
+  "storybookPath": "storybook",
+  "excludePaths": ["ui"]
 }
