--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "dist"
   ],
   "bin": {
-    "storybook-gpt": "./dist/bin.js"
+    "storybook-gpt": "./dist/cli.js"
   },
   "scripts": {
-    "build": "tsup src/index.ts src/bin.ts",
+    "build": "tsup src/index.ts src/cli.ts",
     "test": "exit 0",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint --fix src --ext .ts"
