--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint --fix src --ext .ts"
   },
-  "keywords": [],
+  "keywords": ["storybook", "gpt", "openai", "react", "typescript"],
   "author": "TommyBez",
   "license": "MIT",
   "devDependencies": {
