--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "src",
+    "README.md"
   ],
   "bin": {
     "storybook-gpt": "./dist/cli.js"
